# planificator3000

./: .dockerignore  .gitignore  .prettierignore  .prettierrc.mjs  BACKLOG.md  CHANGELOG.md  Makefile  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  pyproject.toml  railway.json
apps/api/app/: __init__.py  config.py  dependencies.py  exception_handlers.py  main.py  schemas.py
apps/api/app/connectors/sheets/: __init__.py  client.py  exceptions.py  mapper.py  repository.py  schemas.py
apps/api/app/domain/: __init__.py  allocation.py  backlog.py  capacity.py  enums.py  plan.py  report.py  task.py  team.py
apps/api/app/routers/: health.py  plans.py  smoke.py
apps/api/app/services/: __init__.py  allocator.py  backlog.py  capacity.py  orchestrator.py  planner.py  schemas.py
apps/api/tests/: test_config.py  test_dependencies.py  test_exception_handlers.py  test_health.py  test_plans_router.py
apps/api/tests/connectors/sheets/: conftest.py  test_client.py  test_mapper.py  test_repository.py  test_settings.py
apps/api/tests/domain/: conftest.py  test_plan_allocation_backlog_report.py  test_task.py  test_team_capacity.py
apps/api/tests/services/: test_allocator.py  test_backlog.py  test_capacity.py  test_generate_endpoint.py  test_orchestrator.py  test_planner.py
docs/: DEPLOYMENT_CHECKLIST.md  TECHNICAL_DUMP.md  architecture.md  domain-model.md  google-sheets-architecture.md  planning-engine.md
scripts/: smoke-test.sh
(+12 files in other folders)
