[project]
name = "planner3000-api"
version = "0.1.0"
description = "FastAPI backend for ПЛАНИФИКАТОР-3000."
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "pydantic-settings>=2.7.0",
  "gspread>=6.1.4",
  "google-auth>=2.37.0",
]

[dependency-groups]
dev = [
  "mypy>=1.14.0",
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL"]
ignore = ["B008", "PLR0913", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = ["gspread.*", "google.*"]
ignore_missing_imports = true
